@@ -33,7 +33,7 @@
 .if !'\\$1'0' .sp
 ..
 .\" ---------------------------------------------------------------------------
-.TH \f3cdecl\fP 1 "March 30, 2023" "PJL TOOLS"
+.TH \f3cdecl\fP 1 "April 2, 2023" "PJL TOOLS"
 .SH NAME
 cdecl, c++decl \- compose and decipher C & C++ declarations and casts
 .SH SYNOPSIS
@@ -561,6 +561,9 @@ Adds support for
 \f(CWlong double\fP,
 \f(CWlong long\fP,
 \f(CWsigned\fP,
+\f(CWunsigned char\fP,
+\f(CWunsigned long\fP,
+\f(CWunsigned short\fP,
 \f(CWvoid\fP,
 \f(CWvolatile\fP,
 and function prototypes.
